# TaskManager

./: pyproject.toml
task_manager_app/: .env.template  main.py
task_manager_app/alembic/: env.py
task_manager_app/alembic/versions/: 2024_12_21_1535-6cce33ea3ec9_create_user_table.py  2024_12_21_2026-01928116b2fe_create_access_token_table.py
task_manager_app/api/api_v1/: fastapi_users_routers.py
task_manager_app/api/dependencies/: access_tokens.py  backend.py  strategy.py  users.py
task_manager_app/core/: config.py
task_manager_app/core/authentication/: transport.py  user_manager.py
task_manager_app/core/models/: __init__.py  access_token.py  base.py  db_runner.py  users.py
task_manager_app/core/types/: __init__.py
task_manager_app/utils/: __init__.py
